--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     // cardview
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    // Displaying images
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
 }
 apply plugin: 'com.google.gms.google-services'
